Fix some layout issues

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -268,6 +268,21 @@ g.svg-highlight {
   }
 }
 
+g.objects {
+
+  .node {
+    circle {
+        fill: #eeeeec;
+      }
+    }
+
+  .node.expandable {
+    circle {
+      fill: url(#diagStripe);
+    }
+  }
+}
+
 g.group {
   rect.domainTitle {
     fill: @brand-primary;
